update exam section